--- a/.githubworkflows/firebase-deploy.yaml
+++ b/.githubworkflows/firebase-deploy.yaml
@@ -3,7 +3,7 @@ name: Auto Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # or change to your desired branch
+      - main  # Change this if you deploy from a different branch
 
 jobs:
   deploy:
@@ -13,16 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
-
-      - name: Build (Optional - if you're using React/Vite/etc.)
-        run: echo "No build step defined"
 
       - name: Deploy to Firebase
         run: firebase deploy --only hosting
