Add Firebase GitHub Action

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Auto Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # Change this if you deploy from a different branch
+      - main
 
 jobs:
   deploy:
